--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "author": "Tinyland.dev",
   "repository": {
     "type": "git",
-    "url": "https://gitlab.com/tinyland/tinyland.dev",
+    "url": "https://github.com/tinyland-inc/tinyland.dev",
     "directory": "packages/tinyland-user-resolution"
   },
   "dependencies": {},
